# readpdf

./: README.md  pyproject.toml  readpdf.py
